--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="../Projeto 1 HTML/CSS/style.css">
+    <link rel="stylesheet" href="CSS/style.css">
     <title>Pizzaria do Canto</title>
     <meta charset="UTF-8">
     <section>
