--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <section>
       <header>
-        <img src="../Projeto 1 HTML/Imagens/logo.png" alt="logo" width="75" height="75">
+        <img src="Imagens/logo.png" alt="logo" width="75" height="75">
         <div class="menu">
           <a href="#Entradas">Entradas</a>
           <a href="#Massas">Massas</a>
@@ -52,7 +52,7 @@
     <div class="menu-item">Profiteroles all'Italiana - <span class="price">12€</span></div>
     <div class="menu-item">Affogato - <span class="price">3,50€</span></div>
     <div class="menu-item">Torta Di Ricotta - <span class="price">6,50€</span></div>
-    <img src="../Projeto 1 HTML/Imagens/pizza.png" alt="logo" width="750" height="500">
+    <img src="Imagens/pizza.png" alt="logo" width="750" height="500">
     <footer class="footer">
       <div class="footer-content">
         <p><a href="mailto:dinisteles2008@gmail.com">Contacto</a></p>
